--- a/templates/register.html
+++ b/templates/register.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <h1>Registration</h1>
-<form action="" method="post"></form>
+<form action="" method="post">
+    {% csrf_token %}
+    <input type="submit " name="register" value="Register">
+</form>
 </body>
 </html>
