--- a/templates/register.html
+++ b/templates/register.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <h1>Registration</h1>
-<form action="" method="post">
+<form action="" method="POST">
     {% csrf_token %}
-    <input type="submit " name="register" value="Register">
+    <input type="submit" name="register" value="Register">
 </form>
 </body>
 </html>
